--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "amqplib": "^0.8.0",
     "awilix": "^6.1.0",
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "express-joi-validation": "^5.0.1",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.8",
