--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index",
+    "start": "node dist/index",
     "dev-start": "node build/index.js",
     "dev": "nodemon",
     "build": "tsc",
