--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "commonjs" /* Specify what module code is generated. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-    "outDir": "build",
+    "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true
   }
